src/javagrammarParser.java
// Generated from javagrammar.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class javagrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, WS=2, CLASS=3, PUBLIC=4, STATIC=5, VOID=6, IF=7, ELSE=8, WHILE=9, 
		NEW=10, RETURN=11, THIS=12, SYSO=13, LENGTH=14, BOOLEAN=15, INT=16, STRING=17, 
		LONG=18, LEFTBRACKET=19, RIGHTBRACKET=20, LEFTPAREN=21, RIGHTPAREN=22, 
		LEFTBRACE=23, RIGHTBRACE=24, DOT=25, COMMA=26, COLON=27, SEMICOLON=28, 
		PLUS=29, MINUS=30, MULT=31, ASSIGNMENT=32, NOT=33, AND=34, OR=35, LESSTHAN=36, 
		MORETHAN=37, LEQ=38, MEQ=39, EQ=40, NEQ=41, TRUE=42, FALSE=43, INT_LIT=44, 
		LONG_LIT=45, ID=46;
	public static final String[] tokenNames = {
		"<INVALID>", "'main'", "WS", "'class'", "'public'", "'static'", "'void'", 
		"'if'", "'else'", "'while'", "'new'", "'return'", "'this'", "'System.out.println'", 
		"'length'", "'boolean'", "'int'", "'String'", "'long'", "'['", "']'", 
		"'('", "')'", "'{'", "'}'", "'.'", "','", "':'", "';'", "'+'", "'-'", 
		"'*'", "'='", "'!'", "'&&'", "'||'", "'<'", "'>'", "'<='", "'>='", "'=='", 
		"'!='", "'true'", "'false'", "INT_LIT", "LONG_LIT", "ID"
	};
	public static final int
		RULE_program = 0, RULE_mainclass = 1, RULE_classdecl = 2, RULE_vardecl = 3, 
		RULE_methoddecl = 4, RULE_formallist = 5, RULE_formalrest = 6, RULE_type = 7, 
		RULE_stmt = 8, RULE_exp = 9, RULE_explist = 10, RULE_exprest = 11;
	public static final String[] ruleNames = {
		"program", "mainclass", "classdecl", "vardecl", "methoddecl", "formallist", 
		"formalrest", "type", "stmt", "exp", "explist", "exprest"
	};

	@Override
	public String getGrammarFileName() { return "javagrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public javagrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ClassdeclContext classdecl(int i) {
			return getRuleContext(ClassdeclContext.class,i);
		}
		public MainclassContext mainclass() {
			return getRuleContext(MainclassContext.class,0);
		}
		public List<ClassdeclContext> classdecl() {
			return getRuleContexts(ClassdeclContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24); mainclass();
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(25); classdecl();
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainclassContext extends ParserRuleContext {
		public TerminalNode RIGHTBRACKET() { return getToken(javagrammarParser.RIGHTBRACKET, 0); }
		public List<TerminalNode> RIGHTBRACE() { return getTokens(javagrammarParser.RIGHTBRACE); }
		public List<TerminalNode> ID() { return getTokens(javagrammarParser.ID); }
		public TerminalNode VOID() { return getToken(javagrammarParser.VOID, 0); }
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public List<TerminalNode> LEFTBRACE() { return getTokens(javagrammarParser.LEFTBRACE); }
		public TerminalNode RIGHTBRACE(int i) {
			return getToken(javagrammarParser.RIGHTBRACE, i);
		}
		public TerminalNode CLASS() { return getToken(javagrammarParser.CLASS, 0); }
		public TerminalNode PUBLIC() { return getToken(javagrammarParser.PUBLIC, 0); }
		public TerminalNode LEFTBRACKET() { return getToken(javagrammarParser.LEFTBRACKET, 0); }
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode RIGHTPAREN() { return getToken(javagrammarParser.RIGHTPAREN, 0); }
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public TerminalNode STATIC() { return getToken(javagrammarParser.STATIC, 0); }
		public TerminalNode LEFTPAREN() { return getToken(javagrammarParser.LEFTPAREN, 0); }
		public TerminalNode LEFTBRACE(int i) {
			return getToken(javagrammarParser.LEFTBRACE, i);
		}
		public TerminalNode STRING() { return getToken(javagrammarParser.STRING, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public TerminalNode ID(int i) {
			return getToken(javagrammarParser.ID, i);
		}
		public MainclassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainclass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).enterMainclass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).exitMainclass(this);
		}
	}

	public final MainclassContext mainclass() throws RecognitionException {
		MainclassContext _localctx = new MainclassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainclass);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(31); match(CLASS);
			setState(32); match(ID);
			setState(33); match(LEFTBRACE);
			setState(34); match(PUBLIC);
			setState(35); match(STATIC);
			setState(36); match(VOID);
			setState(37); match(1);
			setState(38); match(LEFTPAREN);
			setState(39); match(STRING);
			setState(40); match(LEFTBRACKET);
			setState(41); match(RIGHTBRACKET);
			setState(42); match(ID);
			setState(43); match(RIGHTPAREN);
			setState(44); match(LEFTBRACE);
			setState(48);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(45); vardecl();
					}
					} 
				}
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << SYSO) | (1L << LEFTBRACE) | (1L << ID))) != 0)) {
				{
				{
				setState(51); stmt();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57); match(RIGHTBRACE);
			setState(58); match(RIGHTBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassdeclContext extends ParserRuleContext {
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public MethoddeclContext methoddecl(int i) {
			return getRuleContext(MethoddeclContext.class,i);
		}
		public List<MethoddeclContext> methoddecl() {
			return getRuleContexts(MethoddeclContext.class);
		}
		public TerminalNode RIGHTBRACE() { return getToken(javagrammarParser.RIGHTBRACE, 0); }
		public TerminalNode ID() { return getToken(javagrammarParser.ID, 0); }
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public TerminalNode LEFTBRACE() { return getToken(javagrammarParser.LEFTBRACE, 0); }
		public TerminalNode CLASS() { return getToken(javagrammarParser.CLASS, 0); }
		public ClassdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).enterClassdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).exitClassdecl(this);
		}
	}

	public final ClassdeclContext classdecl() throws RecognitionException {
		ClassdeclContext _localctx = new ClassdeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classdecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(CLASS);
			setState(61); match(ID);
			setState(62); match(LEFTBRACE);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INT) | (1L << LONG) | (1L << ID))) != 0)) {
				{
				{
				setState(63); vardecl();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUBLIC) {
				{
				{
				setState(69); methoddecl();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75); match(RIGHTBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(javagrammarParser.SEMICOLON, 0); }
		public TerminalNode ID() { return getToken(javagrammarParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).enterVardecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).exitVardecl(this);
		}
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); type();
			setState(78); match(ID);
			setState(79); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethoddeclContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(javagrammarParser.SEMICOLON, 0); }
		public FormallistContext formallist() {
			return getRuleContext(FormallistContext.class,0);
		}
		public TerminalNode ID() { return getToken(javagrammarParser.ID, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RIGHTBRACE() { return getToken(javagrammarParser.RIGHTBRACE, 0); }
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public TerminalNode LEFTBRACE() { return getToken(javagrammarParser.LEFTBRACE, 0); }
		public TerminalNode PUBLIC() { return getToken(javagrammarParser.PUBLIC, 0); }
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode RIGHTPAREN() { return getToken(javagrammarParser.RIGHTPAREN, 0); }
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(javagrammarParser.RETURN, 0); }
		public TerminalNode LEFTPAREN() { return getToken(javagrammarParser.LEFTPAREN, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public MethoddeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methoddecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).enterMethoddecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).exitMethoddecl(this);
		}
	}

	public final MethoddeclContext methoddecl() throws RecognitionException {
		MethoddeclContext _localctx = new MethoddeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methoddecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(81); match(PUBLIC);
			setState(82); type();
			setState(83); match(ID);
			setState(84); match(LEFTPAREN);
			setState(85); formallist();
			setState(86); match(RIGHTPAREN);
			setState(87); match(LEFTBRACE);
			setState(91);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(88); vardecl();
					}
					} 
				}
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << SYSO) | (1L << LEFTBRACE) | (1L << ID))) != 0)) {
				{
				{
				setState(94); stmt();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100); match(RETURN);
			setState(101); exp(0);
			setState(102); match(SEMICOLON);
			setState(103); match(RIGHTBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormallistContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(javagrammarParser.ID, 0); }
		public FormalrestContext formalrest(int i) {
			return getRuleContext(FormalrestContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<FormalrestContext> formalrest() {
			return getRuleContexts(FormalrestContext.class);
		}
		public FormallistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formallist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).enterFormallist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).exitFormallist(this);
		}
	}

	public final FormallistContext formallist() throws RecognitionException {
		FormallistContext _localctx = new FormallistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_formallist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INT) | (1L << LONG) | (1L << ID))) != 0)) {
				{
				setState(105); type();
				setState(106); match(ID);
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(107); formalrest();
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalrestContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(javagrammarParser.ID, 0); }
		public TerminalNode COMMA() { return getToken(javagrammarParser.COMMA, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FormalrestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalrest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).enterFormalrest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).exitFormalrest(this);
		}
	}

	public final FormalrestContext formalrest() throws RecognitionException {
		FormalrestContext _localctx = new FormalrestContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_formalrest);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(COMMA);
			setState(116); type();
			setState(117); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode LEFTBRACKET() { return getToken(javagrammarParser.LEFTBRACKET, 0); }
		public TerminalNode BOOLEAN() { return getToken(javagrammarParser.BOOLEAN, 0); }
		public TerminalNode INT() { return getToken(javagrammarParser.INT, 0); }
		public TerminalNode RIGHTBRACKET() { return getToken(javagrammarParser.RIGHTBRACKET, 0); }
		public TerminalNode ID() { return getToken(javagrammarParser.ID, 0); }
		public TerminalNode LONG() { return getToken(javagrammarParser.LONG, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			setState(129);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119); match(INT);
				setState(120); match(LEFTBRACKET);
				setState(121); match(RIGHTBRACKET);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122); match(BOOLEAN);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(123); match(INT);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(124); match(LONG);
				setState(125); match(LEFTBRACKET);
				setState(126); match(RIGHTBRACKET);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(127); match(LONG);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(128); match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(javagrammarParser.SEMICOLON, 0); }
		public TerminalNode RIGHTBRACKET() { return getToken(javagrammarParser.RIGHTBRACKET, 0); }
		public TerminalNode ID() { return getToken(javagrammarParser.ID, 0); }
		public TerminalNode RIGHTBRACE() { return getToken(javagrammarParser.RIGHTBRACE, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public TerminalNode ASSIGNMENT() { return getToken(javagrammarParser.ASSIGNMENT, 0); }
		public TerminalNode LEFTBRACE() { return getToken(javagrammarParser.LEFTBRACE, 0); }
		public TerminalNode WHILE() { return getToken(javagrammarParser.WHILE, 0); }
		public TerminalNode LEFTBRACKET() { return getToken(javagrammarParser.LEFTBRACKET, 0); }
		public TerminalNode IF() { return getToken(javagrammarParser.IF, 0); }
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode RIGHTPAREN() { return getToken(javagrammarParser.RIGHTPAREN, 0); }
		public TerminalNode ELSE() { return getToken(javagrammarParser.ELSE, 0); }
		public TerminalNode SYSO() { return getToken(javagrammarParser.SYSO, 0); }
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode LEFTPAREN() { return getToken(javagrammarParser.LEFTPAREN, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).exitStmt(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stmt);
		int _la;
		try {
			setState(173);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(131); match(LEFTBRACE);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << SYSO) | (1L << LEFTBRACE) | (1L << ID))) != 0)) {
					{
					{
					setState(132); stmt();
					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(138); match(RIGHTBRACE);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(139); match(IF);
				setState(140); match(LEFTPAREN);
				setState(141); exp(0);
				setState(142); match(RIGHTPAREN);
				setState(143); stmt();
				setState(146);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(144); match(ELSE);
					setState(145); stmt();
					}
					break;
				}
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148); match(WHILE);
				setState(149); match(LEFTPAREN);
				setState(150); exp(0);
				setState(151); match(RIGHTPAREN);
				setState(152); stmt();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(154); match(SYSO);
				setState(155); match(LEFTPAREN);
				setState(156); exp(0);
				setState(157); match(RIGHTPAREN);
				setState(158); match(SEMICOLON);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(160); match(ID);
				setState(161); match(ASSIGNMENT);
				setState(162); exp(0);
				setState(163); match(SEMICOLON);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(165); match(ID);
				setState(166); match(LEFTBRACKET);
				setState(167); exp(0);
				setState(168); match(RIGHTBRACKET);
				setState(169); match(ASSIGNMENT);
				setState(170); exp(0);
				setState(171); match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public TerminalNode MORETHAN() { return getToken(javagrammarParser.MORETHAN, 0); }
		public TerminalNode INT() { return getToken(javagrammarParser.INT, 0); }
		public TerminalNode TRUE() { return getToken(javagrammarParser.TRUE, 0); }
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public TerminalNode RIGHTBRACKET() { return getToken(javagrammarParser.RIGHTBRACKET, 0); }
		public TerminalNode AND() { return getToken(javagrammarParser.AND, 0); }
		public TerminalNode EQ() { return getToken(javagrammarParser.EQ, 0); }
		public TerminalNode LEFTPAREN() { return getToken(javagrammarParser.LEFTPAREN, 0); }
		public TerminalNode PLUS() { return getToken(javagrammarParser.PLUS, 0); }
		public TerminalNode INT_LIT() { return getToken(javagrammarParser.INT_LIT, 0); }
		public TerminalNode MEQ() { return getToken(javagrammarParser.MEQ, 0); }
		public TerminalNode OR() { return getToken(javagrammarParser.OR, 0); }
		public TerminalNode ID() { return getToken(javagrammarParser.ID, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public TerminalNode MINUS() { return getToken(javagrammarParser.MINUS, 0); }
		public TerminalNode LEFTBRACKET() { return getToken(javagrammarParser.LEFTBRACKET, 0); }
		public TerminalNode LESSTHAN() { return getToken(javagrammarParser.LESSTHAN, 0); }
		public TerminalNode NEQ() { return getToken(javagrammarParser.NEQ, 0); }
		public TerminalNode NEW() { return getToken(javagrammarParser.NEW, 0); }
		public TerminalNode RIGHTPAREN() { return getToken(javagrammarParser.RIGHTPAREN, 0); }
		public TerminalNode DOT() { return getToken(javagrammarParser.DOT, 0); }
		public TerminalNode MULT() { return getToken(javagrammarParser.MULT, 0); }
		public TerminalNode NOT() { return getToken(javagrammarParser.NOT, 0); }
		public TerminalNode LEQ() { return getToken(javagrammarParser.LEQ, 0); }
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode LENGTH() { return getToken(javagrammarParser.LENGTH, 0); }
		public TerminalNode THIS() { return getToken(javagrammarParser.THIS, 0); }
		public TerminalNode FALSE() { return getToken(javagrammarParser.FALSE, 0); }
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javagrammarListener ) ((javagrammarListener)listener).exitExp(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}
